# extractor_sierra

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FILE_INDEX.md  FINAL_SOLUTION_ROBOT_POSITIONS.md  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE_ROBOT_POSITIONS.txt  README.md  README_ROBOT_POSITIONS.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.5.0.md  RELEASE_NOTES_v3.1.0.md  ROBOT_POSITIONS_SUMMARY.txt  ROBOT_POSITION_EXTRACTION_GUIDE.md  ROBOT_POSITION_INVESTIGATION_SUMMARY.md  ROBOT_TOOLKIT_FILES.txt  SOLUTION_RESUMEE.txt  SUCCESS_REPORT.md  TECHNICAL.md  TEST_WINDOWS.md  UPGRADE_INSTRUCTIONS.md  VERIFICATION_REPORT.md  analyze_audio_positions.py  audio_headers_decoded.txt  audio_positions.txt  build_scene_tree.py  build_windows.sh  count_audio_frames  count_audio_frames.cpp  create_windows_package.sh  debug_audio.cpp  debug_audio_positions  decode_audio_headers  decode_audio_headers.cpp  export_robot_mkv  extract_audio_simple.py  (+42 more)
Resource/: RESMAP.002  RESMDT.001  RESMDT.002
audio/frames/: frame_0001_cel_00.pgm  frame_0002_cel_00.pgm  frame_0004_cel_00.pgm  frame_0005_cel_00.pgm  frame_0006_cel_00.pgm  frame_0012_cel_00.pgm  frame_0020_cel_00.pgm  frame_0033_cel_00.pgm  frame_0035_cel_00.pgm  frame_0036_cel_00.pgm  frame_0044_cel_00.pgm  frame_0049_cel_00.pgm  frame_0050_cel_00.pgm  frame_0051_cel_00.pgm  frame_0054_cel_00.pgm  frame_0058_cel_00.pgm
audio/lr_simple/: 91_EVEN.pcm  91_MONO_22050Hz.pcm  91_ODD.pcm
build-asan/: Makefile
build_win/: Makefile
build_windows/: CMakeCache.txt  Makefile  README.md  README_WINDOWS.txt  cmake_install.cmake
docs/: AUDIO_EXTRACTION_LR.md  AUDIO_EXTRACTION_NOTES.md  AUDIO_VIDEO_SYNC.md  CIRCULAR_BUFFER_IMPLEMENTATION.md  INDEX.md  MKV_FORMAT.md  MOV_PRORES_GUIDE.md  PRORES_EXPORT.md  QUICK_REFERENCE.md  RBT_Decoder_Design.md  RBT_Decoder_Design_code_based.md  RBT_Decoder_Design_enriched.md  README.md  ROBOT_COORDINATES_FINAL.md  ROBOT_COORDINATES_INVESTIGATION.md  ROBOT_POSITIONS_USAGE.md  SCI32_FORMAT_ANALYSIS.md  SCUMMVM_SCI32_FINDINGS.md  TEST_LZS_RBT_FRAMES.md  USAGE_EXAMPLES.md  VERIFICATION_REPORT.md
docs/project/: OUR_IMPLEMENTATION.md  PROJECT_OVERVIEW.md
docs/reference/: DPCM16_DECODER_DOCUMENTATION.md  FORMAT_RBT_DOCUMENTATION.md  GFXPALETTE32_SYSTEM.md  GFXREMAP_SCI16.md  LZS_DECODER_DOCUMENTATION.md  OPENEXR_EXPORT.md  ROBOT_PALETTE_DECODING.md  ROBOT_PALETTE_REMAPPING.md  ROBOT_VIRTUAL_BACKGROUND.md  SCUMMVM_AUDIO_IMPLEMENTATION.md  SCUMMVM_ROBOT_FORMAT.md  SOL_FILE_FORMAT_DOCUMENTATION.md
docs/technical/: AUDIO_ENCODING.md  AUDIO_EXTRACTION_LR.md
examples/: batch_convert_rbt_to_exr.sh  convert_rbt_to_exr.py
examples/sample_rbt/: 1014.RBT
extractor_sierra_windows/: LICENSE  PAS_DIMAGE.txt  README_WINDOWS.txt  config_example.txt  run.bat  run_extraction.bat  test_mov.bat  verify_mov.bat
extractor_sierra_windows/docs/: README.md
out_test/: audio.raw.pcm
out_test/frames/: frame_0000_cel_00.pgm
output_test/: metadata.txt
output_test/frames/: frame_0002_cel_00.ppm  frame_0003_cel_00.ppm  frame_0006_cel_00.ppm  frame_0009_cel_00.ppm  frame_0010_cel_00.ppm  frame_0012_cel_00.ppm  frame_0014_cel_00.ppm  frame_0015_cel_00.ppm  frame_0016_cel_00.ppm  frame_0017_cel_00.ppm  frame_0018_cel_00.ppm  frame_0019_cel_00.ppm  frame_0020_cel_00.ppm  frame_0023_cel_00.ppm  frame_0029_cel_00.ppm  frame_0030_cel_00.ppm  frame_0031_cel_00.ppm  frame_0032_cel_00.ppm  frame_0033_cel_00.ppm  frame_0035_cel_00.ppm  (+9 more)
phantasmagoria_game/: RESMAP.001
src/: CMakeLists.txt  README.md  export_robot_mkv.cpp  extract_coordinates.cpp  lzs_decompressor.cpp  main.cpp  rbt_coordinates_parser.cpp  rbt_parser_with_lzs.cpp  rbt_simple_coordinates.cpp  ressci_extractor.cpp  robot_extractor.cpp  robot_extractor.hpp  sci_robot_positions.cpp  sci_script_analyzer.cpp  stb_image_write_impl.cpp  utilities.cpp  utilities.hpp
src/core/: rbt_parser.cpp  rbt_parser.h  ressci_parser.cpp  ressci_parser.h  robot_audio_stream.cpp  scummvm_robot_helpers.cpp  scummvm_robot_helpers.h
src/formats/: decompressor_lzs.cpp  decompressor_lzs.h  dpcm.cpp  dpcm.h  robot_exr_exporter.cpp  robot_exr_exporter.h  robot_mkv_exporter.cpp  robot_mkv_exporter.h
src/old/: robot_extractor.old
src/robot_decoder/: CMakeLists.txt  README.md  decompressor_lzs.cpp  decompressor_lzs.h  dpcm.cpp  lzs.cpp  lzs.h  main.cpp  memory_stream.h  rbt_parser.cpp  rbt_parser.h  robot_audio_stream.cpp  robot_audio_stream.h  robot_decoder  run_output.txt  run_output_after_patch.txt  run_output_debug.txt  run_output_deterministic.txt  run_output_offset_search.txt  run_output_swap.txt  run_output_table_debug.txt  sci_util.cpp  sci_util.h  test_audio_stream.cpp
src/robot_decoder/common/: memstream.h
src/utils/: exr_writer.cpp  exr_writer.h  stream.h  types.h
test_output/: audio.raw.pcm  cues.txt  metadata.txt
tests/: README.md  audio_alternate_start_offset.cpp  audio_block_continuity.cpp  audio_block_size_limit.cpp  audio_block_too_large.cpp  audio_conflicting_retransmission_parity.cpp  audio_decompression_helpers.hpp  audio_dpcm_predictor_reset.cpp  audio_header_only_block.cpp  audio_offset_two_routing.cpp  audio_reference_data.hpp  audio_runway.cpp  audio_short_block.cpp  audio_start_offset.cpp  conflicting_endian_flags.cpp  corrupt_header.cpp  decompressed_cel_limit.cpp  dpcm16_decoder.cpp  empty_frame.cpp  endianness_detection.cpp  excess_cels_export.cpp  expand_cell.cpp  force_endian_options.cpp  frame_size_overflow.cpp  frame_too_short.cpp  header_additional_fields.cpp  high_resolution.cpp  huge_cel_allocation.cpp  index_alignment_with_offset.cpp  invalid_cel_dimensions.cpp  invalid_cel_size.cpp  invalid_frame_count.cpp  invalid_max_cels_per_frame.cpp  invalid_palette_size.cpp  invalid_vertical_scale.cpp  large_frame.cpp  lzs_decompress.cpp  negative_audio_pos.cpp  negative_primer.cpp  odd_audio_payload.cpp  (+48 more)
tmp/: cues.txt  dump_headers.py  header_dumps.txt  metadata.txt  run91.txt  run91_after.txt  run91_interleave.txt
tools/: README.md  extract_and_make_video.py  make_scummvm_video.py  test_audio_video_sync.py
(+160 files in other folders)
